--- a/TX15_Drive/MODELS/model3.yml
+++ b/TX15_Drive/MODELS/model3.yml
@@ -1,7 +1,7 @@
-semver: 3.0.0
+semver: 2.12.0
 header: 
-   name: "Foamy"
-   bitmap: "nv2.png"
+   name: "Flat Foamy"
+   bitmap: "Flat Foamy.png"
    labels: "Foamy"
 timers: 
    0:
@@ -704,8 +704,65 @@ telemetrySensors:
             offset: 0
 screenData: 
    0:
-      LayoutId: "Layout1P2"
+      LayoutId: Layout2P1
       layoutData: 
+         zones: 
+            0:
+               widgetName: ModelBmp
+               widgetData: 
+                  options: 
+                     0:
+                        type: Color
+                        value: 
+                           color: COLIDX3
+                     1:
+                        type: Unsigned
+                        value: 
+                           unsignedValue: 5
+                     2:
+                        type: Bool
+                        value: 
+                           boolValue: 0
+                     3:
+                        type: Color
+                        value: 
+                           color: COLIDX5
+                     4:
+                        type: Bool
+                        value: 
+                           boolValue: 1
+            1:
+               widgetName: Timer
+               widgetData: 
+                  options: 
+                     0:
+                        type: Unsigned
+                        value: 
+                           unsignedValue: 0
+            2:
+               widgetName: Outputs
+               widgetData: 
+                  options: 
+                     0:
+                        type: Signed
+                        value: 
+                           signedValue: 1
+                     1:
+                        type: Bool
+                        value: 
+                           boolValue: 0
+                     2:
+                        type: Color
+                        value: 
+                           color: COLIDX5
+                     3:
+                        type: Color
+                        value: 
+                           color: COLIDX0
+                     4:
+                        type: Color
+                        value: 
+                           color: COLIDX3
          options: 
             0:
                type: Bool
@@ -728,11 +785,11 @@ screenData:
                value: 
                   boolValue: 0
    1:
-      LayoutId: "Layout1x1"
+      LayoutId: Layout1x1
       layoutData: 
          zones: 
             0:
-               widgetName: "Outputs"
+               widgetName: Outputs
                widgetData: 
                   options: 
                      0:
@@ -779,7 +836,7 @@ screenData:
 topbarData: 
    zones: 
       3:
-         widgetName: "Value"
+         widgetName: Value
          widgetData: 
             options: 
                0:
@@ -803,7 +860,7 @@ topbarData:
                   value: 
                      unsignedValue: 1
       4:
-         widgetName: "Radio Info"
+         widgetName: Radio Info
          widgetData: 
             options: 
                0:
@@ -819,7 +876,7 @@ topbarData:
                   value: 
                      color: 0x48AC50
       5:
-         widgetName: "Date Time"
+         widgetName: Date Time
          widgetData: 
             options: 
                0:
