--- a/TX15_Drive/MODELS/labels.yml
+++ b/TX15_Drive/MODELS/labels.yml
@@ -11,33 +11,33 @@ Models:
     name: "AERO"
     mod0type: 5
     labels: "default"
-    bitmap: "RadioMaster Default.png"
+    bitmap: "BlueTop.png"
     lastopen: 1763836097
   model2.yml:
     hash: "ef1f0000445c7d71"
     name: "RealFlight Simu"
     labels: "RealFlight"
-    bitmap: "FlightSimu Trainer.png"
+    bitmap: "RedTopW.png"
     lastopen: 1770214272
   model3.yml:
     hash: "0b4c0000445c5b6f"
     name: "Flat Foamy"
     mod0type: 5
     labels: "Foamy"
-    bitmap: "Flat Foamy.png"
+    bitmap: "FlatFoam.png"
     lastopen: 1770213493
   model4.yml:
     hash: "c1310000445c2771"
     name: "FX707 Foamy"
     mod0type: 5
     labels: "Foamy"
-    bitmap: "FX707 Foamy.png"
+    bitmap: "FX707.png"
     lastopen: 1770213788
   model5.yml:
     hash: "ae300000445ce571"
     name: "Mini Foamy"
     mod0type: 5
     labels: "Foamy"
-    bitmap: "Mini Foamy.png"
+    bitmap: "MiniGreen.png"
     lastopen: 1770214397
 
