--- a/TX15_Drive/MODELS/model1.yml
+++ b/TX15_Drive/MODELS/model1.yml
@@ -1,7 +1,7 @@
 semver: 2.12.0
 header: 
    name: "AERO"
-   bitmap: "RadioMaster Default.png"
+   bitmap: "BlueTopW.png"
    labels: "default"
 telemetryProtocol: 0
 thrTrim: 0
