--- a/TX15_Drive/MODELS/model3.yml
+++ b/TX15_Drive/MODELS/model3.yml
@@ -1,7 +1,7 @@
 semver: 2.12.0
 header: 
    name: "Flat Foamy"
-   bitmap: "Flat Foamy.png"
+   bitmap: "FlatFoam.png"
    labels: "Foamy"
 timers: 
    0:
