--- a/TX15_Drive/MODELS/model4.yml
+++ b/TX15_Drive/MODELS/model4.yml
@@ -1,7 +1,7 @@
 semver: 2.12.0
 header: 
    name: "FX707 Foamy"
-   bitmap: "FX707 Foamy.png"
+   bitmap: "FX707.png"
    labels: "Foamy"
 timers: 
    0:
