--- a/TX15_Drive/MODELS/model5.yml
+++ b/TX15_Drive/MODELS/model5.yml
@@ -1,7 +1,7 @@
 semver: 2.12.0
 header: 
    name: "Mini Foamy"
-   bitmap: "Mini Foamy.png"
+   bitmap: "MiniGreen.png"
    labels: "Foamy"
 timers: 
    0:
